<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:alpha="0.5"
        android:background="@drawable/round"
        android:text="@string/one"
        android:textSize="20sp"
        android:onClick="one"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:alpha="0.5"
        android:background="@drawable/round"
        android:text="@string/two"
        android:textSize="20sp"
        android:onClick="two"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:alpha="0.5"
        android:background="@drawable/round"
        android:text="@string/three"
        android:textSize="20sp"
        android:onClick="three"
        android:layout_margin="5dp"/>

</LinearLayout>