<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:alpha="0.5"
        android:background="@drawable/round"
        android:text="@string/seven"
        android:onClick="seven"
        android:textSize="20sp"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:alpha="0.5"
        android:background="@drawable/round"
        android:text="@string/eight"
        android:onClick="eight"
        android:textSize="20sp"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:alpha="0.5"
        android:background="@drawable/round"
        android:text="@string/nine"
        android:onClick="nine"
        android:textSize="20sp"
        android:layout_margin="5dp"/>

</LinearLayout>